fix :display logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description"
     content="Connect with event organizers and discover speaking opportunities that match your expertise. Join 1,200+ speakers finding their perfect stage." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="http://FMS Logo line.png" />
+  <meta property="og:image" content="/FMS Logo line.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@lovable_dev" />
